# BioSim

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  setup.cfg  tox.ini
docs/: conf.py  geography_and_animals.rst  index.rst  simulation.rst
examples/: check_sim.py  mono_hc.py  mono_ho.py  sample_sim.py
scripts/: for_stats_test.py  make_island.py
src/biosim/: BioSim.py  Cells.py  Island.py  __init__.py  animals.py  cells.py  graphics.py  island.py  simulation.py
tests/: test_animals_class.py  test_biosim_interface.py  test_cell_class.py  test_island_class.py  test_statistical.py
